--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "admins": [
-        "",
+        "61554405703021",
         "",
         "",
         "",
@@ -10,5 +10,5 @@
     "Prefix": [
         "/"
     ],
-    "botName": "Bot Name here"
+    "botName": "AUTOBOT=[/]"
 }
